traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:13: warning: enclosing method positionFinale has result type Unit: return value discarded
  return (murDevant && murAuNord)
  ^Snake:38: error: value unary_! is not a member of Unit
  while (!positionFinale()) {
         ^